backend/YouTube/busapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: busapi
  name: busapi
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: busapi
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: busapi
    spec:
      containers:
        - env:
            - name: ASPNETCORE_ENVIRONMENT
              value: Development
            - name: REDIS_CONNECTION_STRING
              value: redis:6379
            - name: RabbitOptions_Hostname
              value: rabbit
            - name: RabbitOptions_Password
              value: guest
            - name: RabbitOptions_Username
              value: guest
          image: youtube-busapi:latest
          name: youtube-busapi
          ports:
            - containerPort: 8090
              protocol: TCP
          imagePullPolicy: Never
          volumeMounts:
            - mountPath: /root/.aspnet/DataProtection-Keys
              name: data-protection
      restartPolicy: Always
      volumes:
        - name: data-protection
          persistentVolumeClaim:
            claimName: data-protection
