backend/YouTube/webapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: webapi
  name: webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: webapi
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: webapi
    spec:
      containers:
        - env:
            - name: ASPNETCORE_ENVIRONMENT
              value: Development
            - name: MINIO_ROOT_PASSWORD
              value: minioadmin
            - name: MINIO_ROOT_USER
              value: minioadmin
            - name: REDIS_CONNECTION_STRING
              value: redis:6379
            - name: S3Storage_AccessKey
              value: minioadmin
            - name: S3Storage_Endpoint
              value: minio:9000
            - name: S3Storage_SecretKey
              value: minioadmin
          image: youtube-webapi:latest
          name: youtube-webapi
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Never
          volumeMounts:
            - mountPath: /root/.aspnet/DataProtection-Keys
              name: data-protection
      restartPolicy: Always
      volumes:
        - name: data-protection
          persistentVolumeClaim:
            claimName: data-protection
